# entry

./: README.md  entry  pyproject.toml
entry_lib/: cli.py
entry_lib/data/: SKILL.md
