[project]
name = "entry"
version = "0.1.0"
description = "CLI tool for creating chronologically organized documentation entries"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
entry = "entry_lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entry_lib"]
artifacts = ["entry_lib/data/*"]
